src/objects/jitterbit_Event__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Year__c</fullName>
        <label>Event Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_status__c</fullName>
        <label>Event_status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start_Date</label>
        <type>DateTime</type>
    </fields>
    <label>jitterbit Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Event_status__c</columns>
        <columns>Capacity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>jitterbit Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>jitterbit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>